Utworzono za pomocą Colab

--- a/praca_domowa_7.ipynb
+++ b/praca_domowa_7.ipynb
@@ -188,7 +188,7 @@
         }
       },
       "id": "oNFdhwjNG1Wj",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -222,7 +222,7 @@
         }
       },
       "id": "pLUs6OCyKJpQ",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -238,47 +238,137 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "preds"
-      ],
+      "source": [],
       "metadata": {
         "id": "HS-1D1mFTP3L",
-        "outputId": "0625704e-58d8-4b88-9ace-063cddf9e394",
+        "outputId": "024c2c35-19aa-4f0c-901e-0d31aa47214c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "HS-1D1mFTP3L",
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([ 0.81515341,  1.7253597 ,  1.13898649,  0.47172884,  0.11041324,\n",
-              "        1.12826958, -1.76841988, -1.0630417 ,  0.54966902,  0.28888581,\n",
-              "        1.67609003, -0.93869866,  0.14034365, -1.95287085, -0.2425073 ,\n",
-              "       -0.62185457, -0.33050686, -0.30778859, -1.85746804, -0.44067795,\n",
-              "        1.34232474,  0.08812542,  1.16259991, -1.26922768,  1.39958657,\n",
-              "       -1.56506818, -0.08302248,  0.3315439 , -0.24984649,  1.12541257,\n",
-              "       -0.53142749, -1.9239333 ,  1.01342904, -2.25643497,  1.43499998,\n",
-              "        0.71625455,  0.27573314,  0.70687367, -1.17303538, -0.80370609,\n",
-              "        0.99610286,  2.1976671 ,  2.69452266, -1.40699025, -0.34245724,\n",
-              "       -0.17283976,  1.2259206 , -1.34594039,  1.13824162, -0.5476302 ,\n",
-              "       -0.22758059, -0.012364  ,  0.24042025,  0.78982266,  0.17019408,\n",
-              "        2.33000506, -0.54723955,  0.28511073,  1.85476138, -0.73688147,\n",
-              "        0.46670843,  0.09092389,  1.33211242, -1.85099644, -1.54141403,\n",
-              "       -1.0483817 ,  0.08387166,  0.63509204,  0.04774983, -1.42286751,\n",
-              "        0.38664265, -0.6181903 ,  1.4386294 ,  0.35425448,  0.10887196,\n",
-              "        0.9752567 , -0.04868226,  0.99997158, -1.47588984,  0.51238435,\n",
-              "        0.54320677, -1.24951961,  0.6389401 , -1.00887624, -0.84299791,\n",
-              "       -0.88549003,  0.63020971, -0.99723983,  0.10739895, -0.02336571,\n",
-              "       -0.75884145,  0.50818929, -1.79944487,  0.13131644, -0.79584831,\n",
-              "       -1.16215718,  0.52584464, -0.18263262,  0.79978034,  1.77097939])"
+              "array([False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False])"
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 9
         }
       ]
     }
