Utworzono za pomocą Colab

--- a/praca_9_um.ipynb
+++ b/praca_9_um.ipynb
@@ -91,7 +91,7 @@
         "id": "pTh54bc_nLVv"
       },
       "id": "pTh54bc_nLVv",
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -108,7 +108,7 @@
         }
       },
       "id": "3ywxBlcKnOmX",
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +140,7 @@
         "id": "YA6GmaLQkDuI"
       },
       "id": "YA6GmaLQkDuI",
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -173,7 +173,7 @@
         "id": "S9Kr_ajSss7Q"
       },
       "id": "S9Kr_ajSss7Q",
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -203,7 +203,7 @@
         }
       },
       "id": "QuLNTTUWtKJ8",
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -312,7 +312,7 @@
         }
       },
       "id": "HIbGTMlPqsd1",
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -372,7 +372,7 @@
         }
       },
       "id": "c8JyCj79tYyg",
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -414,7 +414,7 @@
         }
       },
       "id": "CyhqqvSWx_xA",
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -466,7 +466,7 @@
         }
       },
       "id": "oTA470qitkcx",
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -596,7 +596,7 @@
         "id": "1p0hezNOhjRX"
       },
       "id": "1p0hezNOhjRX",
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -617,7 +617,7 @@
         }
       },
       "id": "s_IWCw2_ivCX",
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -741,7 +741,7 @@
         "outputId": "6e041880-ac88-4d9c-d4a5-385f483d37dd"
       },
       "id": "mjcLQpJsjtyO",
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -792,14 +792,13 @@
         "        if step % 50 == 0 or step == num_steps - 1:\n",
         "            print(f\"Step {step} | Loss: {loss.item():.4f} | Mean confidence: {confidence.mean().item():.4f}\")\n",
         "\n",
-        "    return dreamed_images.detach().cpu(), np.array(history)\n",
-        ""
+        "    return dreamed_images.detach().cpu(), np.array(history)\n"
       ],
       "metadata": {
         "id": "ehDouOlbRceS"
       },
       "id": "ehDouOlbRceS",
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -831,13 +830,13 @@
         "id": "Wj3ZQ4w7kNhg"
       },
       "id": "Wj3ZQ4w7kNhg",
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#problem z parami cyfr\n",
+        "#problem z regularyzacją\n",
         "final_images, confidence_history = dream_digits_l2(model, lambda_l2=1)"
       ],
       "metadata": {
@@ -848,7 +847,7 @@
         }
       },
       "id": "m6225AQto61g",
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -868,7 +867,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# test dla różnych par.\n",
+        "# test dla różnych kar (dla problemu z pojedynczą cyfrą jako klasą)\n",
         "for lam in [0.01, 0.1, 1, 10, 100]:\n",
         "  final_images, confidence_history = dream_digits_l2(model, lambda_l2=lam)\n",
         "\n",
@@ -883,7 +882,7 @@
         }
       },
       "id": "tYWy2mockRh5",
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1070,7 +1069,7 @@
         "outputId": "fb6eca5a-f7df-4737-8d55-8efda6150236"
       },
       "id": "UiUZZxvsSdph",
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
