Utworzono za pomocą Colab

--- a/praca_domowa_10.ipynb
+++ b/praca_domowa_10.ipynb
@@ -121,7 +121,7 @@
         }
       },
       "id": "K_b3NgK0mT9C",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,7 +184,7 @@
         "id": "ObfWBGk8nZl_"
       },
       "id": "ObfWBGk8nZl_",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -235,7 +235,7 @@
         }
       },
       "id": "uyEA3Qk3qMj6",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -406,7 +406,7 @@
         }
       },
       "id": "ubj7gcEjrs50",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -466,7 +466,7 @@
         }
       },
       "id": "PpPs8JVt8jqn",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -516,7 +516,7 @@
         }
       },
       "id": "gY6AbngT8mNI",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -759,7 +759,7 @@
         "id": "uXRyDzXjqAhh"
       },
       "id": "uXRyDzXjqAhh",
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -804,7 +804,7 @@
         }
       },
       "id": "KKQPMAwOVamu",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -849,7 +849,7 @@
         "id": "JeK1YXHIwsOu"
       },
       "id": "JeK1YXHIwsOu",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -876,7 +876,7 @@
         }
       },
       "id": "NxkkNDfuTcC9",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -916,13 +916,12 @@
         "id": "s5QW3-rwxD2X",
         "outputId": "84547b29-0d59-496f-83e0-5bae73c89643",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "collapsed": true
       },
       "id": "s5QW3-rwxD2X",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -955,7 +954,8 @@
         "lambda_l2 = 10\n",
         "found_pairs = set()  # To track completed (y_true, y_wrong) pairs\n",
         "max_per_pair = 1     # Just one example per (true, target) pair\n",
-        "\n",
+        "success_counts= [[0 for i in range(10)] for j in range(9)]\n",
+        "trials_counts= [[0 for i in range(10)] for j in range(9)]\n",
         "for i, (x, y) in enumerate(testloader):\n",
         "    y_true = y.item()\n",
         "    x = x.to(device)\n",
@@ -976,6 +976,7 @@
         "            adv_pred = net(x_adv).argmax(dim=1).item()\n",
         "\n",
         "        if adv_pred == y_wrong:\n",
+        "            success_count+=1\n",
         "            found_pairs.add(pair)\n",
         "            print(f\"Found adversarial example for True={y_true}, Target={y_wrong}\")\n",
         "\n",
@@ -1002,7 +1003,7 @@
         }
       },
       "id": "oj8k9ybdbtZr",
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
